--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.gradle
+/build
+
 # Built application files
 /*/build/
 
@@ -9,22 +12,15 @@ local.properties
 
 # Gradle generated files
 .gradle/
+.gradletasknamecache
+gradle.properties
+build/
 
 # Signing files
 .signing/
 
 # User-specific configurations
-.idea/libraries/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/vcs.xml
+.idea/
 *.iml
 
 # OS-specific files
