--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,8 @@ dependencies {
     testImplementation (
             'junit:junit:4.12',
             'org.mockito:mockito-core:2.+', // Mocking framework
-            'org.robolectric:robolectric:3.5.1' // Unit testing framework
+            'org.robolectric:robolectric:3.5.1', // Unit testing framework
+            'org.hamcrest:hamcrest-library:1.3'
     )
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
